--- a/intelligent_systems/lab2/lab2.ipynb
+++ b/intelligent_systems/lab2/lab2.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "id": "624a19f0",
    "metadata": {},
    "outputs": [
@@ -51,12 +51,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.6 µs ± 461 ns per loop (mean ± std. dev. of 10 runs, 100 loops each)\n",
-      "5.69 µs ± 2.43 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n"
+      "18.3 µs ± 1.58 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n",
+      "6.33 µs ± 296 ns per loop (mean ± std. dev. of 10 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "def task2_iterative(n: int):\n",
     "    zero_start_row = [i % 2 for i in range(n)]\n",
     "    one_start_row = [(i + 1) % 2 for i in range(n)]\n",
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "id": "c395cee3",
    "metadata": {},
    "outputs": [
@@ -103,8 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.49 ms ± 24.4 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n",
-      "9 µs ± 3.65 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n"
+      "5.4 ms ± 429 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n",
+      "30.5 µs ± 8.32 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -881,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
