--- a/intelligent_systems/lab1/lab1.ipynb
+++ b/intelligent_systems/lab1/lab1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
     "collapsed": false
    },
    "source": [
-    "Буркіна Фасо - це держава в *Західній Африці*, яка межує з шести країнами\n",
+    "**Буркіна Фасо** - це держава в *Західній Африці*, яка межує з шести країнами\n",
     "- Малі\n",
     "- Нігер\n",
     "- Бенін\n",
@@ -151,7 +151,11 @@
     "\n",
     "## Культура\n",
     "\n",
-    "Культура Буркіна Фасо є дуже *різноманітною*, зокрема в *традиційному мистецтві*, яке відображається у *музиці*, *танцях* та *скульптурах*. Один з видатних свят у країні - це **Фестиваль масок у Дедуґу**, який відбувається кожні два роки та відзначає традиційне мистец"
+    "Культура Буркіна Фасо є дуже *різноманітною*, зокрема в *традиційному мистецтві*, яке відображається у *музиці*, *танцях* та *скульптурах*. Один з видатних свят у країні - це **Фестиваль масок у Дедуґу**, який відбувається кожні два роки та відзначає традиційне мистец\n",
+    "\n",
+    "## Ресурси\n",
+    "\n",
+    "[Wikipedia](https://uk.wikipedia.org/wiki/%D0%91%D1%83%D1%80%D0%BA%D1%96%D0%BD%D0%B0-%D0%A4%D0%B0%D1%81%D0%BE)"
    ]
   },
   {
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -189,15 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Найбільший спільний дільник 16 і 36 - це 4\n",
-      "2. Найбільший спільний дільник 16 і 36 - це 4\n"
+      "1. Найбільший спільний дільник 16 та 36 - це 4\n",
+      "2. Найбільший спільний дільник 16 та 36 - це 4\n"
      ]
     }
    ],
@@ -230,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
